templates/analytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: analytics
  name: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: analytics
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: analytics
    spec:
      containers:
        - env:
            - name: DB_DATABASE
              value: _supabase
            - name: DB_HOSTNAME
              value: db
            - name: DB_PASSWORD
              value: your-super-secret-and-long-postgres-password
            - name: DB_PORT
              value: "5432"
            - name: DB_SCHEMA
              value: _analytics
            - name: DB_USERNAME
              value: supabase_admin
            - name: LOGFLARE_FEATURE_FLAG_OVERRIDE
              value: multibackend=true
            - name: LOGFLARE_MIN_CLUSTER_SIZE
              value: "1"
            - name: LOGFLARE_NODE_HOST
              value: 127.0.0.1
            - name: LOGFLARE_PRIVATE_ACCESS_TOKEN
              value: your-super-secret-and-long-logflare-key-private
            - name: LOGFLARE_PUBLIC_ACCESS_TOKEN
              value: your-super-secret-and-long-logflare-key-public
            - name: LOGFLARE_SINGLE_TENANT
              value: "true"
            - name: LOGFLARE_SUPABASE_MODE
              value: "true"
            - name: POSTGRES_BACKEND_SCHEMA
              value: _analytics
            - name: POSTGRES_BACKEND_URL
              value: postgresql://supabase_admin:your-super-secret-and-long-postgres-password@db:5432/_supabase
          image: supabase/logflare:1.14.2
          livenessProbe:
            exec:
              command:
                - curl
                - http://localhost:4000/health
            failureThreshold: 10
            periodSeconds: 5
            timeoutSeconds: 5
          name: supabase-analytics
          ports:
            - containerPort: 4000
              protocol: TCP
      restartPolicy: Always
