templates/functions-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: functions
  name: functions
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: functions
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: functions
    spec:
      containers:
        - args:
            - start
            - --main-service
            - /home/deno/functions/main
          image: supabase/edge-runtime:v1.67.4
          name: supabase-edge-functions
      restartPolicy: Always
