templates/imgproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: imgproxy
  name: imgproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: imgproxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: imgproxy
    spec:
      containers:
        - env:
            - name: IMGPROXY_BIND
              value: :5001
            - name: IMGPROXY_ENABLE_WEBP_DETECTION
              value: "true"
            - name: IMGPROXY_LOCAL_FILESYSTEM_ROOT
              value: /
            - name: IMGPROXY_USE_ETAG
              value: "true"
          image: darthsim/imgproxy:v3.8.0
          livenessProbe:
            exec:
              command:
                - imgproxy
                - health
            failureThreshold: 3
            periodSeconds: 5
            timeoutSeconds: 5
          name: supabase-imgproxy
          volumeMounts:
            - mountPath: /var/lib/storage
              name: imgproxy-claim0
      restartPolicy: Always
      volumes:
        - name: imgproxy-claim0
          persistentVolumeClaim:
            claimName: imgproxy-claim0
