templates/kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: kong
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kong
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: kong
    spec:
      containers:
        - command:
            - bash
            - -c
            - eval "echo \"$(cat ~/temp.yml)\"" > ~/kong.yml && /docker-entrypoint.sh kong docker-start
          image: kong:2.8.1
          name: supabase-kong
          ports:
            - containerPort: 8000
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          volumeMounts:
            - mountPath: /home/kong/temp.yml
              name: kong-cm0
              readOnly: true
              subPath: temp.yml
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: kong.yml
                path: temp.yml
            name: kong-cm0
          name: kong-cm0
