templates/meta-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: meta
  name: meta
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: meta
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: meta
    spec:
      containers:
        - env:
            - name: PG_META_DB_HOST
              value: db
            - name: PG_META_DB_NAME
              value: postgres
            - name: PG_META_DB_PASSWORD
              value: your-super-secret-and-long-postgres-password
            - name: PG_META_DB_PORT
              value: "5432"
            - name: PG_META_DB_USER
              value: supabase_admin
            - name: PG_META_PORT
              value: "8080"
          image: supabase/postgres-meta:v0.89.3
          name: supabase-meta
      restartPolicy: Always
