templates/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: rest
  name: rest
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rest
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: rest
    spec:
      containers:
        - args:
            - postgrest
          image: postgrest/postgrest:v12.2.12
          name: supabase-rest
      restartPolicy: Always
