templates/studio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: studio
  name: studio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: studio
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: studio
    spec:
      containers:
        - env:
            - name: AUTH_JWT_SECRET
              value: your-super-secret-jwt-token-with-at-least-32-characters-long
            - name: DEFAULT_ORGANIZATION_NAME
              value: Cybutek Organization
            - name: DEFAULT_PROJECT_NAME
              value: Cybutek Project
            - name: LOGFLARE_PRIVATE_ACCESS_TOKEN
              value: your-super-secret-and-long-logflare-key-private
            - name: LOGFLARE_URL
              value: http://analytics:4000
            - name: NEXT_ANALYTICS_BACKEND_PROVIDER
              value: postgres
            - name: NEXT_PUBLIC_ENABLE_LOGS
              value: "true"
            - name: OPENAI_API_KEY
            - name: POSTGRES_PASSWORD
              value: your-super-secret-and-long-postgres-password
            - name: STUDIO_PG_META_URL
              value: http://meta:8080
            - name: SUPABASE_ANON_KEY
              value: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyAgCiAgICAicm9sZSI6ICJhbm9uIiwKICAgICJpc3MiOiAic3VwYWJhc2UtZGVtbyIsCiAgICAiaWF0IjogMTY0MTc2OTIwMCwKICAgICJleHAiOiAxNzk5NTM1NjAwCn0.dc_X5iR_VP_qT0zsiyj_I_OZ2T9FtRU2BBNWN8Bu4GE
            - name: SUPABASE_PUBLIC_URL
              value: http://localhost:8000
            - name: SUPABASE_SERVICE_KEY
              value: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyAgCiAgICAicm9sZSI6ICJzZXJ2aWNlX3JvbGUiLAogICAgImlzcyI6ICJzdXBhYmFzZS1kZW1vIiwKICAgICJpYXQiOiAxNjQxNzY5MjAwLAogICAgImV4cCI6IDE3OTk1MzU2MDAKfQ.DaYlNEoUrrEn2Ig7tqibS-PHK5vgusbcbo7X36XVt4Q
            - name: SUPABASE_URL
              value: http://kong:8000
          image: supabase/studio:2025.06.30-sha-6f5982d
          livenessProbe:
            exec:
              command:
                - node
                - -e
                - fetch('http://studio:3000/api/platform/profile').then((r) => {if (r.status !== 200) throw new Error(r.status)})
            failureThreshold: 3
            periodSeconds: 5
            timeoutSeconds: 10
          name: supabase-studio
      restartPolicy: Always
