templates/supavisor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: supavisor
  name: supavisor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: supavisor
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: supavisor
    spec:
      containers:
        - args:
            - /bin/sh
            - -c
            - /app/bin/migrate && /app/bin/supavisor eval "$()(cat /etc/pooler/pooler.exs)" && /app/bin/server
          image: supabase/supavisor:2.5.6
          livenessProbe:
            exec:
              command:
                - curl
                - -sSfL
                - --head
                - -o
                - /dev/null
                - http://127.0.0.1:4000/api/health
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: supabase-pooler
          ports:
            - containerPort: 5432
              protocol: TCP
            - containerPort: 6543
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/pooler/pooler.exs
              name: supavisor-cm0
              readOnly: true
              subPath: pooler.exs
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: pooler.exs
                path: pooler.exs
            name: supavisor-cm0
          name: supavisor-cm0
