templates/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  ports:
    - name: auth
      port: 9999
      protocol: TCP
      targetPort: 9999
  selector:
    io.kompose.service: auth
