templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - name: db
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    io.kompose.service: db
