templates/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: kong
  name: kong
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "8443"
      port: 8443
      targetPort: 8443
  selector:
    io.kompose.service: kong
