templates/meta-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meta
spec:
  ports:
    - name: meta
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    io.kompose.service: meta
