templates/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest
spec:
  ports:
    - name: rest
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    io.kompose.service: rest
