templates/studio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studio
spec:
  ports:
    - name: studio
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    io.kompose.service: studio
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
