templates/supavisor-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: supavisor
  name: supavisor
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
    - name: "6543"
      port: 6543
      targetPort: 6543
  selector:
    io.kompose.service: supavisor
