templates/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 1
  name: kong-ingress
spec:
  rules:
    - host: supabase.cybutek.com
      http:
        paths:
          - backend:
              service:
                name: kong
                port:
                  number: 8000
            path: /
            pathType: Prefix
